--- a/sergey/templates/base.html
+++ b/sergey/templates/base.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Начало пути</title>
+    <title>Начало пути, сайт визитка</title>
     <style>
         body{
             font: 18px/1.3 Arial, Times
