--- a/sergey/templates/base.html
+++ b/sergey/templates/base.html
@@ -11,8 +11,9 @@
         }
         a{
             font-size: 24px;
+            font-style: italic;
             text-decoration: none;
-            color: orangered;
+            color: rgb(55, 0, 255);
         }
         a:hover {
             text-decoration: underline;
