--- a/sergey/templates/index.html
+++ b/sergey/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block kontent %}
-    <h1>Сайт-визитка</h1>
+    <h1>Главная</h1>
         <style>
             body{
                 font-style: italic;
