--- a/artem/templates/index.html
+++ b/artem/templates/index.html
@@ -2,7 +2,94 @@
 
 
 {% block content %}
-  <h1>Главная</h1>
-  <p>Главная страница нашего сайта</p>
-  <p>Имя пользователя: {{ user_name }}</p>
+
+              <!-- Banner -->
+        <section id="banner">
+          <div class="inner">
+            <a href="#" class="image"><img src="{{ url_for('static', filename='images/doctors.jpg') }}" alt="" /></a>
+                <div class="content">
+            <div class="logo"><span class="icon fa-gem"></span></div>
+            <h2>Врач-травматолог-ортопед Лихачевский Руслан</h2>
+            </div>
+        </section>
+
+              <!-- Wrapper -->
+        <section id="wrapper">
+
+          <!-- One -->
+            <section id="one" class="wrapper spotlight style1">
+              <div class="inner">
+                <a href="#" class="image"><img src="{{ url_for('static', filename='images/logo.jpg')}}" alt="" /></a>
+                <div class="content">
+          <h2 class="major">Консультация травматолога</h2>
+          <p>Первичный прием квалифицированного специалиста в области травматологии, осуществляемый для постановки диагноза и определения тактики лечения при переломах, ушибах, надрывах и разрывах связок, сухожилий и мышц, последствиях травм опорно-двигательного аппарата. Выполняется в условиях травмпункта или приемного покоя, включает в себя первичные диагностические мероприятия и проведение неотложных манипуляций, чаще производится в экстренном порядке. При необходимости врач назначает дополнительные обследования (обычно – рентгенографию, реже – КТ, артроскопию, МРТ) и консультации смежных специалистов.</p>
+          <a href="#" class="special">Learn more</a>
+                </div>
+              </div>
+            </section>
+
+          <!-- Two -->
+            <section id="two" class="wrapper alt spotlight style2">
+              <div class="inner">
+                <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic02.jpg') }}" alt="" /></a>
+                <div class="content">
+          <h2 class="major">Профессиональная переподготовка</h2>
+          <p>ГБОУВПО "Санкт-Петербургский государственный педиатрический медицинский университет", 2017, Травматология и ортопедия</p>
+          <h2 class="major">Высшее образование - специалитет, магистратура</h2>
+          <p>ГБОУВПО "Санкт-Петербургский государственный педиатрический медицинский университет", 2016, Педиатрия</p>
+          <a href="#" class="special">Learn more</a>
+                </div>
+              </div>
+            </section>
+
+          <!-- Three -->
+            <section id="three" class="wrapper spotlight style3">
+              <div class="inner">
+                <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic03.jpg') }}" alt="" /></a>
+                <div class="content">
+          <h2 class="major">Ортопедия для взрослых</h2>
+          <p>Консультации и безоперационное лечение пациентов с травмами и последствиями травм, с заболеваниями суставов и позвоночника, лечение острой боли в суставах, позвоночнике, мышцах, связках, стопах.</p>
+          <a href="#" class="special">Learn more</a>
+                </div>
+              </div>
+            </section>
+
+          <!-- Four -->
+            <section id="four" class="wrapper alt style1">
+              <div class="inner">
+                <h2 class="major">Оказываемые услуги</h2>
+                <p> <!--Ввести текст позже--></p>
+                <section class="features">
+          <article>
+            <a href="#" class="image"><img src="{{ url_for('static', filename='images/2_src.svg') }}" alt="" /></a>
+            <h3 class="major">Ортопедия для взрослых</h3>
+            <p>Консультации и безоперационное лечение пациентов с травмами и последствиями травм, с заболеваниями суставов и позвоночника, лечение острой боли в суставах, позвоночнике, мышцах, связках, стопах.</p>
+            <a href="#" class="special">Learn more</a>
+          </article>
+          <article>
+            <a href="#" class="image"><img src="{{ url_for('static', filename='images/3_src.svg') }}" alt="" /></a>
+            <h3 class="major">Подология</h3>
+            <p>Наука об уходе за здоровой и проблемной стопой называется подологией. Наш подологический кабинет предлагает широкий спектр услуг.</p>
+            <a href="#" class="special">Learn more</a>
+          </article>
+          <article>
+            <a href="#" class="image"><img src="{{ url_for('static', filename='images/4_src.svg') }}" alt="" /></a>
+            <h3 class="major">Консультации по интернету</h3>
+            <p>Консультации по электронной почте, скайпу, в онлайн-чате, в социальных сетях ВК и Facebook.</p>
+            <a href="#" class="special">Learn more</a>
+          </article>
+          <article>
+            <a href="#" class="image"><img src="{{ url_for('static', filename='images/1_src.svg') }}" alt="" /></a>
+            <h3 class="major">Помощь на дому</h3>
+            <p>Консультации специалиста, реабилитация после эндопротезирования суставов и других операций, изготовление индивидуальных стелек.</p>
+            <a href="#" class="special">Learn more</a>
+          </article>
+                </section>
+                <ul class="actions">
+          <li><a href="#" class="button">Browse All</a></li>
+                </ul>
+              </div>
+            </section>
+
+        </section>
 {% endblock %}
