--- a/serik/templates/base.j2
+++ b/serik/templates/base.j2
@@ -1,31 +1,82 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">.
-  <title>Сайт-визитка</title>
-  <style>
-    body {
-      front: 18px/1.3 Times New Roman, canela text;
-    }
-    a {
-      front-size: 24px;
-      text-decoration: none;
-      color: blue;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <a href="{{ url_for('index')}}">Главная</a>
-    <a href="{{ url_for('test')}}">Тестовая</a>
-  </header>
-  <main>
-    {% block content%}{% endblock%}
-  </main>
+<!DOCTYPE HTML>
+<!--
+  Solid State by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Визитка by Mr. Chaikin </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <noscript><link rel="stylesheet" href=" {{ url_for('static', filename='css/noscript.css') }}"></noscript>
+  </head>
+  <body class="is-preload">
+
+    <!-- Page Wrapper -->
+      <div id="page-wrapper">
+
+        <!-- Header -->
+          <header id="header" class="alt">
+            <h1><a href="#">Serik Muratovich Chaikin</a></h1>
+            <nav>
+              <a href="#menu">Menu</a>
+            </nav>
+          </header>
+
+          {% block content%}{% endblock %}
+
+        <!-- Footer -->
+          <section id="footer">
+            <div class="inner">
+              <h2 class="major">Обратная связь</h2>
+              <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+              <form method="post" action="#">
+                <div class="fields">
+                  <div class="field">
+                    <label for="name">ФИО</label>
+                    <input type="text" name="name" id="name" />
+                  </div>
+                  <div class="field">
+                    <label for="email">Электронная почта</label>
+                    <input type="email" name="email" id="email" />
+                  </div>
+                  <div class="field">
+                    <label for="message">Сообщение</label>
+                    <textarea name="message" id="message" rows="4"></textarea>
+                  </div>
+                </div>
+                <ul class="actions">
+                  <li><input type="submit" value="Отправить Сообщение" /></li>
+                </ul>
+              </form>
+              <ul class="contact">
+                <li class="icon solid fa-home">
+                  Russian Federation<br />
+                  190068 Вознесенский проспект дом 45<br />
+                  город Санкт-Петербург
+                </li>
+                <li class="icon solid fa-phone">(906) 25-484-25</li>
+                <li class="icon solid fa-envelope"><a href="#">ser.chaikin@gmail.com</a></li>
+                <li class="icon brands fa-vk"><a href="#">vk.com/id891013</a></li>
+                <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+              </ul>
+              <ul class="copyright">
+                <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              </ul>
+            </div>
+          </section>
+
+      </div>
+
+    <!-- Scripts -->
+      <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/jquery.scrollex.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/browser.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/breakpoints.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
 </body>
 </html>
