--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -38,9 +38,9 @@
         <!-- Banner -->
           <section id="banner">
             <div class="inner">
-              <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic01.jpg') }}" alt="" /></a>
-              <h2>This is Solid State</h2>
-              <p> Привет МИР <a href="http://html5up.net">HTML5 UP</a></p>
+              <a class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
+              <h2>Это мой первый сайт</h2>
+              <p> Приветсвую вас! </p>
             </div>
           </section>
 
@@ -91,12 +91,12 @@
       </div>
 
     <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/jquery.scrollex.min.js"></script>
-      <script src="assets/js/browser.min.js"></script>
-      <script src="assets/js/breakpoints.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <script src="assets/js/main.js"></script>
+      <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/jquery.scrollex.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/browser.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/breakpoints.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
   </body>
 </html>
