--- a/sergey/templates/base.html
+++ b/sergey/templates/base.html
@@ -16,14 +16,12 @@
   </head>
   <body class="is-preload">
       <div id="page-wrapper">
-
           <header id="header" class="alt">
             <h1><a href="index.html">Present one</a></h1>
             <nav>
               <a href="#menu">Меню</a>
             </nav>
           </header>
-
           <nav id="menu">
             <div class="inner">
               <h2>Menu</h2>
@@ -38,16 +36,24 @@
               <a href="#" class="close">Close</a>
             </div>
           </nav>
+        </div>
 
           <section id="banner">
-            <div class="inner">
-              <span><img class="rounded-img" src="{{ url_for('static', filename='images/img.jpg') }}" style="margin-right: 100px;"/></span>
-                <div class="logo">
-                </div>
-                <h2>Серёга - комментатор от Бога!</h2>
-                <p>коротко о себе</a></p>
-                <button>Like!</button>
 
+            <div class="video-box" style="margin-left: -3em;margin-top: -12em;max-height: 100vh;overflow:  hidden;margin-right: -3em;">
+              <video preload="auto" autoplay="autoplay" loop="loop" muted="" playsinline="playsinline">
+              <source src="/video/our-video.webm" type="video/webm">
+              <source src="/static/images/vid.mp4" type="video/mp4">
+              </video>
+              </div>
+              <div class="inner" style="position: absolute;top: 190px;">
+                <span><img class="rounded-img" src="/static/images/img.jpg" style="margin-right: 100px;">
+                </span>
+                  <div class="logo">
+                  </div>
+                  <h2>Серёга - all the best, от Бога!</h2>
+                  <p>коротко о себе</p>
+                  <button>Like!</button>
               </div>
             </div>
           </section>
@@ -90,11 +96,10 @@
                 <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
               </ul>
               <ul class="copyright">
-                <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; Youshkoff prod in. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
               </ul>
             </div>
           </section>
-
       </div>
       <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
       <script src="{{ url_for('static', filename='js/jquery.scrollex.min.js') }}"></script>
