--- a/sergey/templates/index.html
+++ b/sergey/templates/index.html
@@ -17,7 +17,7 @@
             здесь я встречу все рассветы, все закаты и приветы!
             От работы дохнут кони. Ну, а я — бессмертный пони!!!
             </p>
-          <a href="#" class="special">Learn more</a>
+
         </div>
       </div>
     </section>
@@ -32,7 +32,7 @@
              Старайся не портить эмали:
              Потерю зубов не восполнить никак,
              А станешь умнее – едва ли!</p>
-          <a href="#" class="special">Learn more</a>
+          <!--<a href="#" class="special">Learn more</a>-->
         </div>
       </div>
     </section>
@@ -44,7 +44,7 @@
         <div class="content">
           <h2 class="major">...и личная жизнь:)</h2>
           <p>На лице любимой промелькнула тень. И вспыхнул взгляд, такой обычно кроткий. Последнее, что помню я в тот день, Был черный диск чугунной сковородки...</p>
-          <a href="#" class="special">Learn more</a>
+          <!--<a href="#" class="special">Learn more</a>-->
         </div>
       </div>
     </section>
