--- a/sergey/templates/test.html
+++ b/sergey/templates/test.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block kontent %}
+{% block content %}
     <h1>Тестовая</h1>
     <p>Тестовая страница</p>
 {% endblock %}
