--- a/sergey/templates/work.html
+++ b/sergey/templates/work.html
@@ -17,7 +17,7 @@
               <div class="inner">
                 <h3 class="major">Немного о том где я работаю...</h3>
                 <p>С 2019 года я работаю в компании "Вестерн Петроллеум Транспортейшн" (ВПТ). Сфера деятельности: перевозка светлых и темных нефтепродуктов железнодорожным  и автомобильным транспортом для ПАО "ЛУКОЙЛ". В настоящее время ООО "ВПТ" владеет примерно 3,5 тыс наливными железнодорожными цистернами и почти 1,5 тыс автомобильными единицами. Организация крепко стоит на ногах и с перспективой и воодушивлением смотрит в бущее.</p>
-
+                <a href="https://checko.ru/company/vpt-1037705006976" target="_blank" class="special">Для любопытных</a>
                 <p></p>
 
                 <h3 class="major"><div class=""></div>...и чем занимаюсь</h3>
