--- a/sergey/templates/life.html
+++ b/sergey/templates/life.html
@@ -15,9 +15,9 @@
           <!-- Content -->
             <div class="wrapper">
               <div class="inner">
-                <h3 class="major">Пусть будет песня</h3>
-                <a href="https://www.youtube.com/watch?v=vx2u5uUu3DE" target="_blank" class="special">Let's go!</a>
-
+                <h3 class="major">НАДО ЕЕ ПРОЖИТЬ ТАК, ЧТО БЫ ПРО ТЕБЯ ПОТОМКИ ГОВОРИЛИ С ЗАМЕРАНИЕМ СЕРДЦА!!!</h3>
+                <!--<a href="https://www.youtube.com/watch?v=vx2u5uUu3DE" target="_blank" class="special">Let's go!</a>-->
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/vx2u5uUu3DE" title="Bon Jovi - It's My Life (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
               </div>
             </div>
