--- a/sergey/templates/base.html
+++ b/sergey/templates/base.html
@@ -39,9 +39,9 @@
           <section id="banner">
 
             <div class="video-box" style="margin-left: -3em;margin-top: -12em;max-height: 100vh;overflow:  hidden;margin-right: -3em;">
-              <video preload="auto" autoplay="autoplay" loop="loop" muted="" playsinline="playsinline">
-              <source src="/video/our-video.webm" type="video/webm">
-              <source src="/static/images/vid.mp4" type="video/mp4">
+              <video preload="auto" autoplay="autoplay" loop="loop" muted="" playsinline="playsinline" style="width: 92em;">
+              <source src="https://cdn.videvo.net/videvo_files/video/free/2019-01/large_watermarked/181015_13_Venice%20Beach%20Drone_25_preview.mp4">
+              <!--<source src="/static/images/vid.mp4" type="video/mp4">-->
               </video>
               </div>
               <div class="inner" style="position: absolute;top: 190px;">
