--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -38,7 +38,7 @@
         <!-- Banner -->
           <section id="banner">
             <div class="inner">
-              <a class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
+              <a href="#" class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
               <h2>Это мой первый сайт</h2>
               <p> Приветсвую вас! </p>
             </div>
