--- a/anton/templates/base.j2
+++ b/anton/templates/base.j2
@@ -10,12 +10,11 @@
   <body class="is-preload">
     <header id="header">
       <div class="content">
-        <h1><a href="#">Фрактал</a></h1>
-        <p>Just a simple, single page responsive<br />
-        template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+        <h1><a href="#">{{ page_title }}</a></h1>
+        {# <p>Небольшое описание страницы</p> #}
         <ul class="actions">
-          <li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-          <li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+          <li><a href="{{ url_for('index') }}" class="button primary icon solid fa-home">На главную</a></li>
+          <li><a href="{{ url_for('demo_form') }}" class="button icon solid fa-calendar scrolly">Отправить форму</a></li>
         </ul>
       </div>
       <div class="image phone"><div class="inner"><img src="{{ url_for('static', filename='images/screen.jpg') }}" alt="" /></div></div>
