--- a/anton/templates/thanks.j2
+++ b/anton/templates/thanks.j2
@@ -6,6 +6,7 @@
       <header class="major">
         <h2>Мы скоро свяжимся с вами.</h2>
       </header>
+      <p>Можете посмотреть себя в <a href="{{ url_for('users') }}">списке пользователей</a></p>
     </div>
   </section>
 {% endblock %}
