--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -35,39 +35,42 @@
             </div>
           </nav>
 
-        <!-- Banner -->
-          <section id="banner">
-            <div class="inner">
-              <a href="#" class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
-              <h2>Это мой первый сайт</h2>
-              <p> Приветсвую вас! </p>
-            </div>
-          </section>
-
     {% block content %}{% endblock %}
 
         <!-- Footer -->
           <section id="footer">
             <div class="inner">
-              <h2 class="major">Get in touch</h2>
-              <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-              <form method="post" action="#">
+              <h2 class="major">Форма обратной связи</h2>
+              <p> Остались вопросы? Задай их через форму обратной связи.</p>
+              <form method="post" action=" {{ url_for('index') }}" novalidate>
+              {{ form.hidden_tag() }}
                 <div class="fields">
                   <div class="field">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
+                    {{ form.name.label }}
+                    {{ form.name(size=28, placeholder=form.name.label.text) }}
+                    {% for error in form.name.errors %}
+                      <span style="color: red;"> {{error}}</span>
+                    {% endfor %}
                   </div>
                   <div class="field">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
+                    {{ form.email.label }}
+                    {{ form.email(size=28, placeholder=form.email.label.text) }}
+                    {% for error in form.email.errors %}
+                      <span style="color: red;"> {{error}}</span>
+                    {% endfor %}
+                  </div>
                   </div>
                   <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="4"></textarea>
+                    {{ form.message.label }}
+                    {{ form.message(size=28, placeholder=form.message.label.text) }}
+                    {% for error in form.message.errors %}
+                      <span style="color: red;"> {{error}}</span>
+                    {% endfor %}
+                  </div>
                   </div>
                 </div>
                 <ul class="actions">
-                  <li><input type="submit" value="Send Message" /></li>
+                  <li>{{ form.submit() }}</li>
                 </ul>
               </form>
               <ul class="contact">
