--- a/foldernikita/templates/index.j2
+++ b/foldernikita/templates/index.j2
@@ -4,6 +4,15 @@
         <!-- Wrapper -->
           <section id="wrapper">
 
+           <!-- Banner -->
+          <section id="banner">
+            <div class="inner">
+              <a href="#" class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
+              <h2>Это мой первый сайт</h2>
+              <p> Приветсвую вас! </p>
+            </div>
+          </section>
+
             <!-- One -->
               <section id="one" class="wrapper spotlight style1">
                 <div class="inner">
