--- a/artem/templates/base.html
+++ b/artem/templates/base.html
@@ -48,8 +48,8 @@
       <!-- Footer -->
       <section id="footer">
         <div class="inner">
-          <h2 class="major">Get in touch</h2>
-          <p>.</p>
+          <h2 class="major">Свяжитесь с нами</h2>
+          <p>Отправить сообщение</p>
           <form method="post" action="{{ url_for('index') }}" novalidate>
             {{ form.hidden_tag() }}
             <div class="fields">
