--- a/sergey/templates/base.html
+++ b/sergey/templates/base.html
@@ -58,36 +58,45 @@
 
 {% block content %}{% endblock %}
 
-
-
           <section id="footer">
             <div class="inner">
               <h2 class="major">За жили-были</h2>
               <p>вопрос/ответ</p>
-              <form method="post" action="#">
+              <form method="post" action="{{ url_for('index') }}" novalidate>
+                {{ form.hidden_tag() }}
                 <div class="fields">
                   <div class="field">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
+                    {{ form.name.label }}
+                    {{ form.name(size=32, placeholder=form.name.label.text) }}
+                    {% for error in form.name.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                   <div class="field">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
+                    {{ form.email.label }}
+                    {{ form.email(size=32, placeholder=form.email.label.text) }}
+                    {% for error in form.email.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                   <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="4"></textarea>
+                    {{ form.message.label }}
+                    {{ form.message(size=32, placeholder=form.message.label.text) }}
+                    {% for error in form.message.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                 </div>
                 <ul class="actions">
-                  <li><input type="submit" value="Send Message" /></li>
+                  <li>{{ form.submit() }}</li>
                 </ul>
               </form>
               <ul class="contact">
                 <li class="icon solid fa-home">
                   St.Petesburg<br />
                   Secret<br />
-                  Rus                </li>
+                  Rus
+                </li>
                 <li class="icon solid fa-phone">(912) 155-8668</li>
                 <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
                 <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
