--- a/serik/templates/base.j2
+++ b/serik/templates/base.j2
@@ -25,30 +25,42 @@
             </nav>
           </header>
 
+
+
           {% block content%}{% endblock %}
 
         <!-- Footer -->
           <section id="footer">
             <div class="inner">
               <h2 class="major">Обратная связь</h2>
-              <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-              <form method="post" action="#">
+              <p>Если у Вас есть воспросы или предложения, напишите мне своё обращение</p>
+              <form method="post" action="{{ url_for('index') }}" novalidate
+                {{ form.hidden_tag() }}
                 <div class="fields">
                   <div class="field">
-                    <label for="name">ФИО</label>
-                    <input type="text" name="name" id="name" />
+                    {{ form.name.label }}
+                    {{ form.name(size=32, placeholder=form.name.label.text) }}
+                    {% for error in form.name.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                   <div class="field">
-                    <label for="email">Электронная почта</label>
-                    <input type="email" name="email" id="email" />
+                    {{ form.email.label }}
+                    {{ form.email(size=32, placeholder=form.email.label.text) }}
+                    {% for error in form.email.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                   <div class="field">
-                    <label for="message">Сообщение</label>
-                    <textarea name="message" id="message" rows="4"></textarea>
+                    {{ form.message.label }}
+                    {{ form.message(size=32, placeholder=form.message.label.text) }}
+                    {% for error in form.message.errors %}
+                      <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
                   </div>
                 </div>
                 <ul class="actions">
-                  <li><input type="submit" value="Отправить Сообщение" /></li>
+                  <li>{{ form.submit() }}></li>
                 </ul>
               </form>
               <ul class="contact">
