--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -28,8 +28,9 @@
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('test') }}">Generic</a></li>
                 <li><a href="{{ url_for('elements') }}">Elements</a></li>
-                <li><a href="#">Log In</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="{{ url_for('security.login') }}">Log In</a></li>
+                <li><a href="{{ url_for('security.register') }}">Sign Up</a></li>
+                <li><a href="{{ url_for('security.logout') }}">Logout</a></li>
               </ul>
               <a href="#" class="close">Close</a>
             </div>
