Начал переделывать наполнение шаблонов

--- a/foldernikita/templates/index.j2
+++ b/foldernikita/templates/index.j2
@@ -7,19 +7,24 @@
            <!-- Banner -->
           <section id="banner">
             <div class="inner">
-              <a href="#" class="image"><img src="{{ url_for('static', filename='images/myphoto.jpg') }}" alt="" /></a>
-              <h2>Это мой первый сайт</h2>
-              <p> Приветсвую вас! </p>
+              <h2>Производство металлоконструкций ООО "ИМЯ"</h2>
+              <p> Приветсвуем вас на нашем сайте! </p>
             </div>
           </section>
 
             <!-- One -->
               <section id="one" class="wrapper spotlight style1">
                 <div class="inner">
-                  <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic01.jpg') }}" alt="" /></a>
+                  <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic00.jpg') }}" alt="" /></a>
                   <div class="content">
-                    <h2 class="major">Magna arcu feugiat</h2>
-                    <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+                    <h2 class="major">О компании</h2>
+                    <p>ООО "ИМЯ"
+                    <br> - это команда специалистов: операторы станков, слесари, сварщики, мастера по очистке и покраске металлоконструкций
+                    <br> - более 2000 кв. м. производственных площадей
+                    <br> - современный станочный парк
+                    <br> - внедренная методология бережливого производства
+                    <br> - приверженность принципам устойчивого развития
+                    <br> - уверенность Клиента в высочайшем качестве любых видов работ, выполненных нами</p>
                     <a href="#" class="special">Learn more</a>
                   </div>
                 </div>
@@ -30,8 +35,8 @@
                 <div class="inner">
                   <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic02.jpg') }}" alt="" /></a>
                   <div class="content">
-                    <h2 class="major">Tempus adipiscing</h2>
-                    <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+                    <h2 class="major">Мощности</h2>
+                    <p>Основное помещение площадью 2000 кв. метров и отдельный покрасочный цех позволяют изготавливать до 200 тонн металлоконструкций ежемесячно взависимости от сложности изделий.</p>
                     <a href="#" class="special">Learn more</a>
                   </div>
                 </div>
