Начал работу над ЛК

--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -14,23 +14,21 @@
 
      <!-- Header -->
           <header id="header" class="alt">
-            <h1><a href="index.html">Solid State</a></h1>
+            <h1><a href="index.html">ООО "ИМЯ"</a></h1>
             <nav>
-              <a href="#menu">Menu</a>
+              <a href="#menu">Меню</a>
             </nav>
           </header>
 
         <!-- Menu -->
           <nav id="menu">
             <div class="inner">
-              <h2>Menu</h2>
+              <h2>Меню</h2>
               <ul class="links">
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('test') }}">Generic</a></li>
-                <li><a href="{{ url_for('elements') }}">Elements</a></li>
-                <li><a href="{{ url_for('security.login') }}">Log In</a></li>
-                <li><a href="{{ url_for('security.register') }}">Sign Up</a></li>
-                <li><a href="{{ url_for('security.logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('index') }}">Главная</a></li>
+                <li><a href="{{ url_for('security.register') }}">Регистрация</a></li>
+                <li><a href="{{ url_for('security.login') }}">Вход в личный кабинет</a></li>
+                <li><a href="{{ url_for('security.logout') }}">Выход</a></li>
               </ul>
               <a href="#" class="close">Close</a>
             </div>
