--- a/foldernikita/templates/index.j2
+++ b/foldernikita/templates/index.j2
@@ -25,7 +25,6 @@
                     <br> - внедренная методология бережливого производства
                     <br> - приверженность принципам устойчивого развития
                     <br> - уверенность Клиента в высочайшем качестве любых видов работ, выполненных нами</p>
-                    <a href="#" class="special">Learn more</a>
                   </div>
                 </div>
               </section>
@@ -37,7 +36,6 @@
                   <div class="content">
                     <h2 class="major">Мощности</h2>
                     <p>Основное помещение площадью 2000 кв. метров и отдельный покрасочный цех позволяют изготавливать до 200 тонн металлоконструкций ежемесячно взависимости от сложности изделий.</p>
-                    <a href="#" class="special">Learn more</a>
                   </div>
                 </div>
               </section>
@@ -45,11 +43,14 @@
             <!-- Three -->
               <section id="three" class="wrapper spotlight style3">
                 <div class="inner">
-                  <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic03.jpg') }}" alt="" /></a>
+                  <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic01.jpg') }}" alt="" /></a>
                   <div class="content">
-                    <h2 class="major">Nullam dignissim</h2>
-                    <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-                    <a href="#" class="special">Learn more</a>
+                  <h2 class="major">Алгоритм нашей работы</h2>
+                    <p>- Предварительный расчет стоимости и сроков изготовления
+                    <br>- Разработка КМД
+                    <br>- Закупка металлопроката
+                    <br>- Технологические операции: раскрой, сборка, сварка, очистка, окраска, упаковка (контроль качества осуществляется на всех этапах)
+                    <br>- Отгрузка Заказчику
                   </div>
                 </div>
               </section>
@@ -57,37 +58,26 @@
             <!-- Four -->
               <section id="four" class="wrapper alt style1">
                 <div class="inner">
-                  <h2 class="major">Vitae phasellus</h2>
-                  <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+                  <h2 class="major">Продукция</h2>
+                  <p>Предприятие ООО ИМЯ изготавливает следующие виды продукции</p>
                   <section class="features">
                     <article>
                       <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic04.jpg') }}" alt="" /></a>
-                      <h3 class="major">Sed feugiat lorem</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <h3 class="major">Конструктивные элементы для промышленного и гражданского строительства</h3>
                     </article>
                     <article>
                       <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic05.jpg') }}" alt="" /></a>
-                      <h3 class="major">Nisl placerat</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <h3 class="major">Сварные каркасы</h3>
                     </article>
                     <article>
                       <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic06.jpg') }}" alt="" /></a>
-                      <h3 class="major">Ante fermentum</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <h3 class="major">Лестницы, ограждения и прочие металлоконструкции</h3>
                     </article>
                     <article>
                       <a href="#" class="image"><img src="{{ url_for('static', filename='images/pic07.jpg') }}" alt="" /></a>
-                      <h3 class="major">Fusce consequat</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                      <a href="#" class="special">Learn more</a>
+                      <h3 class="major">Нетиповые изделия</h3>
                     </article>
                   </section>
-                  <ul class="actions">
-                    <li><a href="#" class="button">Browse All</a></li>
-                  </ul>
                 </div>
               </section>
 
