Продолжил работу над ЛК

--- a/foldernikita/templates/index.j2
+++ b/foldernikita/templates/index.j2
@@ -118,6 +118,22 @@
               </form>
               </div>
             </section>
+            <!-- Footer -->
+          <section id="footer">
+            <div class="inner">
+              <ul class="contact">
+                <li class="icon solid fa-home">
+                  {{company_contacts.adress}}
+                </li>
+                <li class="icon solid fa-phone">{{company_contacts.phone}}</li>
+                <li class="icon brands fa-facebook-f"><a href="#">{{company_contacts.telegram}}</a></li>
+                <li class="icon brands fa-instagram"><a href="#">{{company_contacts.instagram}}</a></li>
+              </ul>
+              <ul class="copyright">
+                <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              </ul>
+            </div>
+          </section>
           </section>
 
 {% endblock %}
