Сделал форму замены контактных данных в лк

--- a/foldernikita/templates/base.j2
+++ b/foldernikita/templates/base.j2
@@ -37,6 +37,14 @@
     {% block content %}{% endblock %}
 
       </div>
+      <!-- Footer -->
+          <section id="footer">
+            <div class="inner">
+              <ul class="copyright">
+                <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              </ul>
+            </div>
+          </section>
 
     <!-- Scripts -->
       <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
